# AutoSkill

./: .env.example  .gitignore  README.md  pyproject.toml
obsidian-plugin/: esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: api-client.ts  main.ts  proposal-modal.ts  search-modal.ts  settings.ts  sidebar-view.ts  types.ts
src/skill_pipeline/: __init__.py  cli.py  dedup.py  embedder.py  pipeline.py  progress.py  vault_init.py  writer.py
src/skill_pipeline/core/: config.py  embedder.py  llm.py  progress.py  store.py
src/skill_pipeline/dashboard/: app.py  kg_routes.py  routes.py
src/skill_pipeline/dashboard/static/: app.js  index.html  style.css
src/skill_pipeline/knowledge/: __init__.py  chromadb_store.py  chunker.py  doc_parser.py  indexer.py  router.py  tagger.py  watcher.py
src/skill_pipeline/mcp/: server.py
src/skill_pipeline/proposals/: __init__.py  evaluator.py  tracker.py
src/skill_pipeline/skills/: parser.py  pipeline.py  writer.py
tests/: test_embedder.py
