[project]
name = "skill-pipeline"
version = "0.1.0"
description = "Deduplicate AI agent skills into a radix tree using embeddings and local LLM"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "watchfiles>=0.20",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12.0",
    "umap-learn>=0.5",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "python-multipart>=0.0.26",
    "fastmcp>=2.0",
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "watchdog>=4.0",
]

[project.scripts]
skill-pipeline = "skill_pipeline.cli:app"
autoskill = "skill_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
